--- a/report/base/commands.tex
+++ b/report/base/commands.tex
@@ -1,18 +1,15 @@
+% custom commands
+\newcommand{\college}{PONTIFICIA UNIVERSIDAD CATÓLICA DEL PERÚ}
+\newcommand{\faculty}{Facultad de Ciencias e Ingenier\'ia}
+\newcommand{\courseTitle}{Proyecto de Fin de Carrera 1}
+\newcommand{\courseCode}{1INF42}
 % for each command
 % there is an example below
-\newcommand{\courseTitle}{Nombre del Curso}
-% \newcommand{\courseTitle}{Proyecto de Fin de Carrera 1}
-\newcommand{\college}{NOMBRE DE LA UNIVERSIDAD}
-% \newcommand{\college}{PONTIFICIA UNIVERSIDAD CATÓLICA DEL PERÚ}
-\newcommand{\faculty}{Nombre de la Facultad}
-% \newcommand{\faculty}{Facultad de Ciencias e Ingenier\'ia}
-\newcommand{\courseCode}{Código del Curso}
-% \newcommand{\courseCode}{1INF42}
 \newcommand{\semester}{Ciclo}
 % \newcommand{\semester}{2025-1}
 \newcommand{\noteDate}{Fecha}
 % \newcommand{\noteDate}{\today}
-\newcommand{\numberReport}{Número del Informe}
+\newcommand{\numberReport}{Número del Entregable}
 % \newcommand{\numberReport}{Entregable 2}
 \newcommand{\authors}{Nombre del Autor}
 % \newcommand{\authors}{Saymon Estefano Nicho Manrique}
